# Arcade-Learning-Environment

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  vcpkg.json
.claude/skills/ale-vector-autoresearch/: SKILL.md  check-protected.sh  run_loop.sh
.github/docker/: manylinux-vcpkg.Dockerfile
.github/workflows/: ci.yml
autoresearch/: JOURNAL.md  ale_vector_optimization.md  analyse.py  bench.py  compare.py  protected.sha256  verify.py
cmake/custom-triplets/: x64-windows-mixed.cmake
docs/: environments.md
docs/_scripts/: environment-docs.json  gen_environments_md.py
docs/environments/: adventure.md  air_raid.md  alien.md  amidar.md  assault.md  asterix.md  asteroids.md  atlantis.md  atlantis2.md  backgammon.md  bank_heist.md  basic_math.md  battle_zone.md  beam_rider.md  berzerk.md  blackjack.md  bowling.md  boxing.md  breakout.md  carnival.md  casino.md  centipede.md  chopper_command.md  crazy_climber.md  crossbow.md  darkchambers.md  defender.md  demon_attack.md  donkey_kong.md  double_dunk.md  earthworld.md  elevator_action.md  enduro.md  entombed.md  et.md  fishing_derby.md  flag_capture.md  freeway.md  frogger.md  frostbite.md  (+64 more)
main/: .buildinfo
src/ale/: CMakeLists.txt  ale_interface.cpp  ale_interface.hpp
src/ale/environment/: ale_state.cpp  ale_state.hpp  stella_environment.cpp  stella_environment.hpp
src/ale/games/: RomSettings.cpp  RomSettings.hpp  RomSettings2P.hpp  RomSettings4P.hpp
src/ale/games/supported/: Pong.cpp  Pong.hpp
src/ale/python/: CMakeLists.txt  ale_python_interface.hpp  ale_vector_python_interface.cpp  ale_vector_python_interface.hpp  ale_vector_xla_interface.cpp  env.py  vector_env.py
src/ale/vector/: CMakeLists.txt  action_queue.hpp  async_vectorizer.hpp  env_vectorizer.cpp  preprocessed_env.cpp  preprocessed_env.hpp  result_staging.hpp  utils.hpp
tests/cpp/: action_buffer_queue_test.cc  dict_test.cc  image_process_test.cc
tests/python/: test_atari_env.py  test_atari_vector_xla.py  test_legacy_registration.py  test_python_interface.py
